Split some stuff into separate files

--- a/Craftscii.vbproj
+++ b/Craftscii.vbproj
@@ -68,8 +68,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockGraphic.vb" />
+    <Compile Include="BlockType.vb" />
+    <Compile Include="Coordinate.vb" />
     <Compile Include="craftscii.vb" />
     <Compile Include="EntityClass.vb" />
+    <Compile Include="InventoryItem.vb" />
     <Compile Include="MapGenerator.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -86,6 +90,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Player.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
